Bug 1635018 - Part 1: Limit dragexit event to chrome on Nightly r=edgar,masayuki
Differential Revision: https://phabricator.services.mozilla.com/D121189

UltraBlame original commit: 9cde7bcaba462e0656f7706253b85d6cb0a3d423

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12371,6 +12371,25 @@ true
 mirror
 :
 always
+-
+name
+:
+dom
+.
+event
+.
+dragexit
+.
+enabled
+type
+:
+bool
+value
+:
+IS_NOT_NIGHTLY_BUILD
+mirror
+:
+always
 #
 Whether
 WheelEvent
