--- a/testing/web-platform/meta/html/editing/dnd/historical.html.ini
+++ b/testing/web-platform/meta/html/editing/dnd/historical.html.ini
@@ -3,17 +3,16 @@ historical
 .
 html
 ]
-[
-ondragexit
-must
-not
-be
-present
-on
-the
-GlobalEventHandlers
-locations
-]
-expected
+prefs
 :
-FAIL
+[
+dom
+.
+event
+.
+dragexit
+.
+enabled
+:
+false
+]
