Bug 1718326 - Part 2: Migrate web-platform-tests suite to new Azure Windows 10 2004 workers r=jmaher,webdriver-reviewers,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D121490

UltraBlame original commit: b3f848aa478eb77d6ae9dd70cb7701deda1b9f91

--- a/testing/web-platform/meta/content-security-policy/inside-worker/serviceworker-script-src.https.sub.html.ini
+++ b/testing/web-platform/meta/content-security-policy/inside-worker/serviceworker-script-src.https.sub.html.ini
@@ -28,6 +28,13 @@ self
 ]
 expected
 :
+if
+win10_2004
+:
+[
+TIMEOUT
+FAIL
+]
 FAIL
 [
 Reports
@@ -46,4 +53,11 @@ self
 ]
 expected
 :
+if
+win10_2004
+:
+[
+TIMEOUT
+FAIL
+]
 FAIL
