--- a/testing/web-platform/meta/resize-observer/observe.html.ini
+++ b/testing/web-platform/meta/resize-observer/observe.html.ini
@@ -193,6 +193,13 @@ linux
 PASS
 FAIL
 ]
+if
+win10_2004
+:
+[
+PASS
+FAIL
+]
 [
 test14
 :
@@ -267,6 +274,21 @@ os
 "
 linux
 "
+:
+[
+PASS
+FAIL
+]
+[
+test5
+:
+observe
+img
+]
+expected
+:
+if
+win10_2004
 :
 [
 PASS
