--- a/testing/web-platform/meta/scroll-to-text-fragment/find-range-from-text-directive.html.ini
+++ b/testing/web-platform/meta/scroll-to-text-fragment/find-range-from-text-directive.html.ini
@@ -22,6 +22,10 @@ mac
 "
 :
 OK
+if
+win10_2004
+:
+OK
 TIMEOUT
 [
 inverted
@@ -206,6 +210,10 @@ os
 "
 mac
 "
+:
+PASS
+if
+win10_2004
 :
 PASS
 NOTRUN
@@ -625,6 +633,10 @@ NOTRUN
 PASS
 TIMEOUT
 ]
+if
+win10_2004
+:
+PASS
 if
 os
 =
