--- a/testing/web-platform/meta/scroll-to-text-fragment/force-load-at-top.html.ini
+++ b/testing/web-platform/meta/scroll-to-text-fragment/force-load-at-top.html.ini
@@ -44,6 +44,10 @@ fragment
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 FAIL
 [
 no
@@ -81,7 +85,10 @@ mac
 PASS
 TIMEOUT
 ]
-NOTRUN
+if
+win10_2004
+:
+TIMEOUT
 [
 no
 -
