--- a/testing/web-platform/meta/web-share/idlharness.https.window.js.ini
+++ b/testing/web-platform/meta/web-share/idlharness.https.window.js.ini
@@ -21,6 +21,10 @@ ShareData
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -52,6 +56,10 @@ type
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -82,6 +90,10 @@ TypeError
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
