--- a/testing/web-platform/meta/web-share/share-empty.https.html.ini
+++ b/testing/web-platform/meta/web-share/share-empty.https.html.ini
@@ -22,6 +22,10 @@ dictionary
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -39,6 +43,10 @@ dictionary
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
@@ -64,6 +72,10 @@ dictionary
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -88,6 +100,10 @@ dictionary
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -108,6 +124,10 @@ fields
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
