--- a/testing/web-platform/meta/web-share/share-url-invalid.https.html.ini
+++ b/testing/web-platform/meta/web-share/share-url-invalid.https.html.ini
@@ -22,6 +22,10 @@ invalid
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -44,6 +48,10 @@ URLs
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -63,6 +71,10 @@ URLs
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
@@ -84,6 +96,10 @@ URLs
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -103,6 +119,10 @@ URLs
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
@@ -124,6 +144,10 @@ URLs
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -144,6 +168,10 @@ URLs
 expected
 :
 if
+win10_2004
+:
+PASS
+if
 os
 =
 =
@@ -163,6 +191,10 @@ URLs
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
