--- a/testing/web-platform/meta/webrtc/no-media-call.html.ini
+++ b/testing/web-platform/meta/webrtc/no-media-call.html.ini
@@ -42,6 +42,15 @@ fission
 OK
 TIMEOUT
 ]
+if
+(
+win10_2004
+)
+:
+[
+OK
+TIMEOUT
+]
 [
 Can
 set
@@ -101,6 +110,15 @@ mac
 and
 not
 debug
+:
+[
+PASS
+TIMEOUT
+]
+if
+(
+win10_2004
+)
 :
 [
 PASS
