--- a/testing/web-platform/meta/web-share/share-sharePromise-internal-slot.https.html.ini
+++ b/testing/web-platform/meta/web-share/share-sharePromise-internal-slot.https.html.ini
@@ -14,6 +14,10 @@ html
 expected
 :
 if
+win10_2004
+:
+OK
+if
 os
 =
 =
@@ -51,6 +55,10 @@ slot
 ]
 expected
 :
+if
+win10_2004
+:
+PASS
 if
 os
 =
