Bug 1723531 - Move Windows 10 x64 2004 ccov back to the old workers r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D121752

UltraBlame original commit: 69fe9b204c7256038c21d036598fb531838d540a

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -981,6 +981,26 @@ tests
 mochitest
 -
 webgpu
+-
+windows10
+-
+2004
+-
+tests
+#
+For
+Bug
+1723531
+-
+web
+-
+platform
+-
+tests
+#
+For
+Bug
+1723531
 windows10
 -
 64
@@ -1379,43 +1399,6 @@ win10
 -
 64
 2004
-windows10
--
-64
--
-2004
--
-ccov
--
-qr
-/
-opt
-:
-build
--
-platform
-:
-win64
--
-ccov
-/
-opt
-test
--
-sets
-:
--
-web
--
-platform
--
-tests
--
-windows10
--
-2004
--
-tests
 windows10
 -
 64
