Bug 1724247 - Specify full publisher subject in MSIX repackages. r=bhearsum
Installing the Nightly MSIX packages, signed with Mozilla's Nightly
key, yields an error: "Error in parsing the app package."  Unpacking
with `makeappx.exe` yields:
```
MakeAppx : error: Error info: error 8007000B: The app manifest publisher name (CN=Mozilla Corporation) must match the subject name of the signing certificate (CN=Mozilla Corporation, OU=Firefox Engineering Operations, O=Mozilla Corporation, L=Mountain View, S=California, C=US).
```

Previously, we allowed just the `CN` to vary; in this patch we make
the publisher be the entire publisher subject, and we update the
publisher details in the task definitions.

Differential Revision: https://phabricator.services.mozilla.com/D121896

UltraBlame original commit: b9f8b70249d4d6515a625faddc78811ac82e7f49

--- a/taskcluster/ci/repackage-shippable-l10n-msix/kind.yml
+++ b/taskcluster/ci/repackage-shippable-l10n-msix/kind.yml
@@ -413,12 +413,35 @@ level
 "
 :
 "
+CN
+=
 Mozilla
 Corporation
+OU
+=
+Firefox
+Engineering
+Operations
+O
+=
+Mozilla
+Corporation
+L
+=
+Mountain
+View
+S
+=
+California
+C
+=
+US
 "
 default
 :
 "
+CN
+=
 Mozilla
 Fake
 SPC
