Bug 1723149 - Enable Firefox Suggest address bar labels for all en-* locales. r=mak,nanj,andreio
Differential Revision: https://phabricator.services.mozilla.com/D121437

UltraBlame original commit: 3d765b0e8cfb3f899437686c283cb497b1550684

--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -472,7 +472,12 @@ browser_enterAfterMouseOver
 js
 ]
 [
-browser_firefoxSuggestLabels
+browser_focusedCmdK
+.
+js
+]
+[
+browser_groupLabels
 .
 js
 ]
@@ -486,19 +491,6 @@ xml
 searchSuggestionEngine
 .
 sjs
-skip
--
-if
-=
-asan
-#
-Bug
-1701321
-[
-browser_focusedCmdK
-.
-js
-]
 [
 browser_handleCommand_fallback
 .
