Bug 1724166 - Add pref for large keepalive factor r=necko-reviewers,dragana
Differential Revision: https://phabricator.services.mozilla.com/D121839

UltraBlame original commit: b19fdf435550af00321e5e43ad7787843c590d88

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -55466,6 +55466,43 @@ mirror
 :
 always
 #
+The
+factor
+by
+which
+to
+increase
+the
+keepalive
+timeout
+when
+the
+#
+NS_HTTP_LARGE_KEEPALIVE
+flag
+is
+used
+for
+a
+connection
+-
+name
+:
+network
+.
+http
+.
+largeKeepaliveFactor
+type
+:
+RelaxedAtomicUint32
+value
+:
+10
+mirror
+:
+always
+#
 If
 set
 to
