Bug 1724306 [wpt PR 29865] - Update wpt metadata, a=testonly
wpt-pr: 29865
wpt-type: metadata

UltraBlame original commit: 31850fb3b1bd9558735885941a17e2695aba9540

--- a/testing/web-platform/meta/inert/inert-retargeting-iframe.tentative.html.ini
+++ b/testing/web-platform/meta/inert/inert-retargeting-iframe.tentative.html.ini
@@ -26,12 +26,8 @@ and
 webrender
 :
 [
-"
 OK
-"
-"
 TIMEOUT
-"
 ]
 if
 (
@@ -62,7 +58,7 @@ and
 not
 debug
 :
-OK
+TIMEOUT
 if
 os
 =
@@ -71,7 +67,7 @@ os
 win
 "
 :
-OK
+TIMEOUT
 if
 os
 =
@@ -80,8 +76,7 @@ os
 linux
 "
 :
-OK
-ERROR
+TIMEOUT
 [
 Tests
 that
@@ -190,7 +185,7 @@ coordinates
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 elementsFromPoint
 returns
