Bug 1723104 [wpt PR 29849] - Update wpt metadata, a=testonly
wpt-pr: 29849
wpt-type: metadata

UltraBlame original commit: c6c1308308aba20736cf29f1579a70dee8976826

--- a/testing/web-platform/meta/fetch/api/basic/request-upload.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/basic/request-upload.any.js.ini
@@ -91,6 +91,31 @@ expected
 :
 FAIL
 [
+Feature
+detect
+for
+POST
+with
+ReadableStream
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+using
+request
+object
+]
+expected
+:
+FAIL
+[
 request
 -
 upload
@@ -176,6 +201,31 @@ and
 not
 retry
 .
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+using
+request
+object
 ]
 expected
 :
@@ -273,6 +323,31 @@ expected
 :
 FAIL
 [
+Feature
+detect
+for
+POST
+with
+ReadableStream
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+using
+request
+object
+]
+expected
+:
+FAIL
+[
 request
 -
 upload
@@ -360,6 +435,31 @@ and
 not
 retry
 .
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+]
+expected
+:
+FAIL
+[
+Feature
+detect
+for
+POST
+with
+ReadableStream
+using
+request
+object
 ]
 expected
 :
