Bug 1722371 [wpt PR 29788] - Update wpt metadata, a=testonly
wpt-pr: 29788
wpt-type: metadata

UltraBlame original commit: 3897c8c73bd51e16f43d0134823e07a09c71c68a

--- a/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
@@ -101,3 +101,45 @@ traversal
 expected
 :
 FAIL
+[
+Button
+controller
+code
+should
+be
+applied
+in
+flat
+tree
+traversal
+order
+regardless
+of
+dynamic
+insertion
+order
+]
+expected
+:
+FAIL
+[
+Listbox
+controller
+code
+should
+be
+applied
+in
+flat
+tree
+traversal
+order
+regardless
+of
+dynamic
+insertion
+order
+]
+expected
+:
+FAIL
