--- a/testing/web-platform/meta/css/selectors/has-basic.html.ini
+++ b/testing/web-platform/meta/css/selectors/has-basic.html.ini
@@ -418,3 +418,36 @@ elements
 expected
 :
 FAIL
+[
+:
+has
+(
+>
+.
+parent
+)
+matches
+expected
+elements
+]
+expected
+:
+FAIL
+[
+:
+has
+(
+>
+.
+parent
+>
+.
+target
+)
+matches
+expected
+elements
+]
+expected
+:
+FAIL
