Bug 1723030 [wpt PR 29845] - Update wpt metadata, a=testonly
wpt-pr: 29845
wpt-type: metadata

UltraBlame original commit: edbcdfdf4ab0a2c6df0256e745fbca9a0c39dd90

--- a/testing/web-platform/meta/css/mediaqueries/prefers-contrast.html.ini
+++ b/testing/web-platform/meta/css/mediaqueries/prefers-contrast.html.ini
@@ -20,3 +20,45 @@ enabled
 :
 true
 ]
+[
+Should
+be
+parseable
+in
+a
+CSS
+stylesheet
+:
+'
+(
+prefers
+-
+contrast
+:
+custom
+)
+'
+]
+expected
+:
+FAIL
+[
+Should
+be
+parseable
+in
+JS
+:
+'
+(
+prefers
+-
+contrast
+:
+custom
+)
+'
+]
+expected
+:
+FAIL
