--- a/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
@@ -143,3 +143,26 @@ order
 expected
 :
 FAIL
+[
+selected
+-
+value
+controller
+code
+should
+be
+applied
+in
+flat
+tree
+traversal
+order
+regardless
+of
+dynamic
+insertion
+order
+]
+expected
+:
+FAIL
