Bug 1723958 - [devtools] Use targetActor.originalWindow instead of window in bfcache navigation. r=jdescottes.
During the pagehide event, we're checking that the target we're navigating away
from is the expected one.
We previously used the window property, but this is a getter that is updated when
a document is selected in the iframe picker.
Since the goal is to check the actual document the target was created for, we
can use the originalWindow property instead.

A test is added, which is failing without the fixes of this patch.

We take this as an opportunity to clear the iframe picker list on will-navigate,
(as the test was failing on Fission without this), which allows us to remove the
`_notifyDocShellDestroyAll` method of the `BrowsingContextTargetActor` that was
also called before emitting the `will-navigate` event.

Differential Revision: https://phabricator.services.mozilla.com/D121727

UltraBlame original commit: 3a3f6075172ec7a76496837a22c71af963e2308e

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -1225,6 +1225,24 @@ navigation
 js
 ]
 [
+browser_inspector_iframe
+-
+picker
+-
+bfcache
+-
+navigation
+.
+js
+]
+[
+browser_inspector_iframe
+-
+picker
+.
+js
+]
+[
 browser_inspector_infobar_01
 .
 js
@@ -1872,13 +1890,6 @@ ids
 and
 -
 classes
-.
-js
-]
-[
-browser_inspector_select
--
-docshell
 .
 js
 ]
