Backed out changeset 3a3f6075172e (bug 1723958) for causing xpcshell failures on test_addon_debugging_connect.js. CLOSED TREE
UltraBlame original commit: 849c38f0c789ff2fe05611b07a55fc27f7f71e02

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -1225,24 +1225,6 @@ navigation
 js
 ]
 [
-browser_inspector_iframe
--
-picker
--
-bfcache
--
-navigation
-.
-js
-]
-[
-browser_inspector_iframe
--
-picker
-.
-js
-]
-[
 browser_inspector_infobar_01
 .
 js
@@ -1890,6 +1872,13 @@ ids
 and
 -
 classes
+.
+js
+]
+[
+browser_inspector_select
+-
+docshell
 .
 js
 ]
