Bug 1714585 - Make Fission the primary way to run AWSY base. r=perftest-reviewers,AlexandruIonescu
This allows awsy-base to be run with Fission via the "variants" value.

It also makes us run it with Fission everywhere that we currently
run non-Fission, and changes it to be tier 1. For continuity, it
continues to run awsy-base with non-Fission on mozilla-central.
I'm not sure how much that matters, though in theory we could
have a regression there that doesn't show up with Fission.

This also disables bfcache in parent because it hits some process
selection issues that result in multiple about:blank ending up
in a single process.

I'm not sure if the bugbug-push-schedules.json changes are needed.

Differential Revision: https://phabricator.services.mozilla.com/D121682

UltraBlame original commit: 11db8586ad4296efca00ab8c1a30e9dc3b3f91c9

--- a/taskcluster/ci/test/awsy.yml
+++ b/taskcluster/ci/test/awsy.yml
@@ -483,6 +483,11 @@ about
 blank
 base
 case
+variants
+:
+[
+fission
+]
 treeherder
 -
 symbol
@@ -502,50 +507,6 @@ by
 variant
 :
 fission
-:
-by
--
-test
--
-platform
-:
-linux1804
--
-64
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-windows10
--
-64
--
-2004
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
 :
 by
 -
@@ -621,6 +582,53 @@ mozilla
 -
 release
 ]
+default
+:
+by
+-
+test
+-
+platform
+:
+linux1804
+-
+64
+-
+shippable
+-
+qr
+/
+opt
+:
+[
+mozilla
+-
+central
+]
+windows10
+-
+64
+-
+2004
+-
+shippable
+-
+qr
+/
+opt
+:
+[
+mozilla
+-
+central
+]
+default
+:
+[
+]
+tier
+:
+default
 mozharness
 :
 extra
