--- a/dom/ipc/tests/browser.ini
+++ b/dom/ipc/tests/browser.ini
@@ -226,26 +226,24 @@ skip
 if
 =
 verify
-fission
-&
-&
-os
-=
-=
-"
-linux
-"
-&
-&
 asan
 #
-Bug
-1713905
--
-new
-Fission
-platform
-triage
+This
+test
+is
+timing
+sensitive
+failures
+in
+asan
+builds
+don
+'
+t
+indicate
+a
+real
+problem
 [
 browser_very_fission
 .
