Bug 1724349 - add back expectation for a test step in force-load-at-top.html and adjust for Windows Azure. r=jmaher DONTBUILD
Bug 1718326 had dropped a 'NOTRUN' annotation by accident. In addition, further
adjustments for Windows 10 2004 were needed.

Differential Revision: https://phabricator.services.mozilla.com/D121999

UltraBlame original commit: 0a3c64d5c9cfed3206a2fc26b7064e798b40a5fc

--- a/testing/web-platform/meta/scroll-to-text-fragment/force-load-at-top.html.ini
+++ b/testing/web-platform/meta/scroll-to-text-fragment/force-load-at-top.html.ini
@@ -23,6 +23,13 @@ mac
 OK
 TIMEOUT
 ]
+if
+win10_2004
+:
+[
+OK
+TIMEOUT
+]
 TIMEOUT
 [
 force
@@ -44,6 +51,18 @@ fragment
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 no
@@ -78,6 +97,7 @@ win
 "
 :
 [
+PASS
 TIMEOUT
 NOTRUN
 ]
