Bug 1724280 - Add method to SnapshotSelector to immediately rebuild rather than deferring r=mossop
Differential Revision: https://phabricator.services.mozilla.com/D121906

UltraBlame original commit: d3b365bf90fe3a416e200c99cd02538c9c470a6f

--- a/browser/components/places/tests/unit/interactions/xpcshell.ini
+++ b/browser/components/places/tests/unit/interactions/xpcshell.ini
@@ -86,6 +86,11 @@ test_snapshotselection_recent
 js
 ]
 [
+test_snapshotselection_setUrlAndRebuildNow
+.
+js
+]
+[
 test_snapshotselection_typed
 .
 js
