Bug 1714200: skip failing mochitest-browser-chrome tests on M1 machines r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D121221

UltraBlame original commit: aa5628314ad20c95fcfb83298c11f63d836dd59a

--- a/browser/base/content/test/webrtc/browser.ini
+++ b/browser/base/content/test/webrtc/browser.ini
@@ -311,6 +311,7 @@ apple_catalina
 #
 platform
 migration
+apple_silicon
 [
 browser_devices_get_user_media_tear_off_tab
 .
@@ -327,6 +328,7 @@ apple_catalina
 #
 platform
 migration
+apple_silicon
 [
 browser_devices_get_user_media_unprompted_access
 .
