--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -739,6 +739,11 @@ browser_ext_contextMenus_targetUrlPatterns
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_contextMenus_uninstall
 .
@@ -910,6 +915,11 @@ browser_ext_incognito_views
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_incognito_popup
 .
@@ -983,6 +993,11 @@ browser_ext_menus_replace_menu
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_menus_replace_menu_context
 .
@@ -1006,6 +1021,11 @@ browser_ext_menus_targetElement_extension
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_menus_targetElement_shadow
 .
@@ -1021,6 +1041,11 @@ browser_ext_menus_viewType
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_mousewheel_zoom
 .
@@ -1073,6 +1098,7 @@ mac
 '
 )
 )
+apple_silicon
 [
 browser_ext_optionsPage_browser_style
 .
@@ -1295,18 +1321,6 @@ e10s
 |
 !
 crashreporter
-apple_silicon
-#
-crashreporter
-tests
-on
-apple_silicon
-appear
-to
-fail
-with
-a
-crash
 [
 browser_ext_port_disconnect_on_window_close
 .
@@ -1440,6 +1454,11 @@ browser_ext_sidebarAction_contextMenu
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 browser_ext_sidebarAction_httpAuth
 .
