Bug 1714200: skip failing xpcshell tests on M1 machines r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D121225

UltraBlame original commit: 4ac688e75aaad4c3ce3e16b5c0b83f2083ccdc68

--- a/browser/extensions/formautofill/test/unit/xpcshell.ini
+++ b/browser/extensions/formautofill/test/unit/xpcshell.ini
@@ -486,6 +486,11 @@ test_addressRecords
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 test_autofillFormFields
 .
@@ -501,6 +506,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_collectFormFields
 .
@@ -526,6 +532,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_extractLabelStrings
 .
@@ -571,6 +578,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_isAvailable
 .
@@ -656,6 +664,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_savedFieldNames
 .
@@ -681,6 +690,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_storage_remove
 .
@@ -696,6 +706,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_storage_syncfields
 .
@@ -716,6 +727,7 @@ Times
 out
 bug
 1612707
+apple_silicon
 [
 test_sync
 .
