--- a/devtools/server/tests/xpcshell/xpcshell.ini
+++ b/devtools/server/tests/xpcshell/xpcshell.ini
@@ -1291,6 +1291,11 @@ test_stepping
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 test_stepping
 -
@@ -1498,6 +1503,11 @@ test_watchpoint
 .
 js
 ]
+skip
+-
+if
+=
+apple_silicon
 [
 test_watchpoint
 -
