--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.ini
@@ -59,6 +59,7 @@ android
 &
 &
 debug
+apple_silicon
 [
 test_ext_webRequest_redirect_StreamFilter
 .
@@ -113,3 +114,4 @@ tsan
 #
 Bug
 1683730
+apple_silicon
