--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -446,6 +446,7 @@ Android
 :
 Bug
 1700482
+apple_silicon
 [
 test_ext_cookies_firstParty
 .
@@ -573,6 +574,7 @@ tsan
 #
 Bug
 1683730
+apple_silicon
 [
 test_ext_contentscript_context_isolation
 .
@@ -586,6 +588,7 @@ tsan
 #
 Bug
 1683730
+apple_silicon
 [
 test_ext_contentscript_create_iframe
 .
