Bug 1722337 - disable browser_net_stacktraces-visibility.js on linux_18.04_64 for frequent failures. r=intermittent-reviewers,jmaher
Differential Revision: https://phabricator.services.mozilla.com/D121919

UltraBlame original commit: 857f3b296001e058981c4ffac347cf8699871e5a

--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -1785,6 +1785,25 @@ visibility
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+#
+Bug
+1722337
 [
 browser_net_statistics
 -
