--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -41860,6 +41860,82 @@ mirror
 :
 always
 #
+Whether
+we
+should
+throw
+on
+invalid
+pseudo
+-
+elements
+passed
+to
+#
+getComputedStyle
+(
+)
+as
+per
+spec
+.
+#
+#
+Old
+behavior
+is
+a
+bit
+odd
+:
+returning
+an
+empty
+style
+if
+the
+string
+starts
+with
+#
+a
+double
+colon
+and
+return
+the
+regular
+style
+otherwise
+.
+-
+name
+:
+layout
+.
+css
+.
+computed
+-
+style
+.
+throw
+-
+on
+-
+invalid
+-
+pseudo
+type
+:
+bool
+value
+:
+IS_NIGHTLY_BUILD
+mirror
+:
+always
+#
 Are
 implicit
 tracks
