Bug 1283388 - Implement datetime-local UI. r=Gijs
This only shows the date picker for now (matches Safari). Seems fine
since we don't enable the time picker by default.

Differential Revision: https://phabricator.services.mozilla.com/D113116

UltraBlame original commit: 8aef29efdec24dc1356af56a3f3e0774be4668cf

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14853,7 +14853,7 @@ type
 bool
 value
 :
-IS_ANDROID
+true
 mirror
 :
 always
@@ -14889,7 +14889,7 @@ type
 bool
 value
 :
-false
+true
 mirror
 :
 always
