Backed out changeset 8aef29efdec2 (bug 1283388) for causing failures in test_MozEditableElement_setUserInput.html. CLOSED TREE
UltraBlame original commit: 6f71100cb98ada8eefd9d5bd175543635e85be47

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14853,7 +14853,7 @@ type
 bool
 value
 :
-true
+IS_ANDROID
 mirror
 :
 always
@@ -14889,7 +14889,7 @@ type
 bool
 value
 :
-true
+false
 mirror
 :
 always
