--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/cookie.tentative.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/cookie.tentative.https.html.ini
@@ -67,6 +67,25 @@ x86
 OK
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+webrender
+:
+[
+OK
+TIMEOUT
+]
 [
 same_origin
 anonymous
