Bug 1724533 - add back annotations for intermittent failures of resize-observer/observe.html. DONTBUILD
The expectation in bug 1724306 had removed them.

Differential Revision: https://phabricator.services.mozilla.com/D122096

UltraBlame original commit: f3a1f6e9b78f7398e2d110d74a833e952b75b774

--- a/testing/web-platform/meta/resize-observer/observe.html.ini
+++ b/testing/web-platform/meta/resize-observer/observe.html.ini
@@ -93,6 +93,44 @@ android
 :
 FAIL
 [
+test13
+:
+an
+observation
+is
+fired
+after
+the
+change
+of
+writing
+mode
+when
+box
+'
+s
+specified
+size
+comes
+from
+physical
+size
+properties
+.
+]
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
+[
 test14
 :
 observe
@@ -117,10 +155,25 @@ os
 =
 =
 "
+linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
 win
 "
 :
+[
 FAIL
+PASS
+]
 [
 test18
 :
@@ -195,6 +248,54 @@ os
 =
 "
 linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
+[
+test17
+:
+Box
+sizing
+snd
+Resize
+Observer
+notifications
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
+win
 "
 :
 [
