Bug 1721781 - Make HTTP3 work when we use DIRECT proxy connection, r=necko-reviewers,dragana
Differential Revision: https://phabricator.services.mozilla.com/D120805

UltraBlame original commit: 1ca0e903eb30f77b54b78a92dda1fb5035389434

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -3883,3 +3883,34 @@ test_304_headers
 .
 js
 ]
+[
+test_http3_direct_proxy
+.
+js
+]
+skip
+-
+if
+=
+tsan
+|
+|
+os
+=
+=
+'
+android
+'
+|
+|
+socketprocess_networking
+run
+-
+sequentially
+=
+node
+server
+exceptions
+dont
+replay
+well
