Bug 1721665 - Do not overwrite private browsing permission lifetime when removing permissions. r=timhuang,preferences-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D121749

UltraBlame original commit: 99a3d76b7f7d6703bc69286c85807c29e14e369c

--- a/browser/components/preferences/tests/browser.ini
+++ b/browser/components/preferences/tests/browser.ini
@@ -731,6 +731,11 @@ browser_permissions_dialog
 js
 ]
 [
+browser_permissions_dialog_default_perm
+.
+js
+]
+[
 browser_statePartitioning_PBM_strings
 .
 js
