--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -42308,6 +42308,51 @@ true
 Is
 support
 for
+color
+-
+mix
+with
+non
+-
+SRGB
+color
+spaces
+on
+content
+enabled
+?
+-
+name
+:
+layout
+.
+css
+.
+color
+-
+mix
+.
+color
+-
+spaces
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+IS_NIGHTLY_BUILD
+mirror
+:
+always
+rust
+:
+true
+#
+Is
+support
+for
 DOMMatrix
 enabled
 ?
