--- a/testing/web-platform/meta/css/css-color/__dir__.ini
+++ b/testing/web-platform/meta/css/css-color/__dir__.ini
@@ -1,16 +1,3 @@
-[
-color
--
-mix
--
-basic
--
-001
-.
-tentative
-.
-html
-]
 prefs
 :
 [
@@ -21,6 +8,21 @@ css
 color
 -
 mix
+.
+enabled
+:
+true
+layout
+.
+css
+.
+color
+-
+mix
+.
+color
+-
+spaces
 .
 enabled
 :
