--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -63262,6 +63262,37 @@ mirror
 :
 always
 #
+Whether
+the
+storage
+allowed
+check
+should
+be
+cached
+on
+the
+inner
+window
+.
+-
+name
+:
+privacy
+.
+antitracking
+.
+cacheStorageAllowedForWindow
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 Enable
 the
 heuristic
