Backed out 2 changesets (bug 1723536, bug 1723198) for causing xpcshell failures on test_SocketScalars.js. CLOSED TREE
Backed out changeset 16c398716c60 (bug 1723198)
Backed out changeset 47c08d2c33f4 (bug 1723536)

UltraBlame original commit: 9bc32566e1c4dcec6b84b7d584942ee501f8435e

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -1526,6 +1526,21 @@ test_ext_schema
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+#
+Android
+:
+Bug
+1680132
 [
 test_ext_script_filenames
 .
