Bug 1133698 - Implement PKCS8 import/export of ECDSA keys for WebCrypto API. r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D97857

UltraBlame original commit: 31ee83932e0420d88efe51dd5602e7d55dd6d467

--- a/testing/web-platform/meta/WebCryptoAPI/sign_verify/ecdsa.https.any.js.ini
+++ b/testing/web-platform/meta/WebCryptoAPI/sign_verify/ecdsa.https.any.js.ini
@@ -3490,6 +3490,246 @@ expected
 :
 FAIL
 [
+ECDSA
+P
+-
+256
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
 ecdsa
 .
 https
@@ -6973,6 +7213,246 @@ verifying
 with
 wrong
 algorithm
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+256
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+384
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+1
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+256
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+384
+verification
+failure
+due
+to
+bad
+hash
+name
+]
+expected
+:
+FAIL
+[
+ECDSA
+P
+-
+521
+with
+SHA
+-
+512
+verification
+failure
+due
+to
+bad
+hash
 name
 ]
 expected
