Bug 1706080 - [css-fonts] Implement 'font-synthesis: small-caps'.  r=jfkthame
Differential Revision: https://phabricator.services.mozilla.com/D114313

UltraBlame original commit: ccd03e2f466b4623583fa4ad711a7a56a493d96f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -46281,6 +46281,47 @@ rust
 :
 true
 #
+Is
+'
+font
+-
+synthesis
+:
+small
+-
+caps
+'
+supported
+?
+-
+name
+:
+layout
+.
+css
+.
+font
+-
+synthesis
+-
+small
+-
+caps
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+rust
+:
+true
+#
 Whether
 frame
 visibility
