Bug 1717760 - Disable `KeyEvent.initKeyEvent` by default r=smaug
Now, Gecko is the only browser to support undocumented `KeyEvent.initKeyEvent`.
We should drop it by default because `typeof KeyboardEvent.initKeyEvent` is
used at least in a major web-site and which causes not working the web-site.

Differential Revision: https://phabricator.services.mozilla.com/D121029

UltraBlame original commit: 81a7baecf0cb61ff4a02e18a2c72466f9a993c65

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -15255,6 +15255,33 @@ mirror
 :
 always
 #
+Enable
+/
+disable
+KeyboardEvent
+.
+initKeyEvent
+function
+-
+name
+:
+dom
+.
+keyboardevent
+.
+init_key_event
+.
+enabled
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
 If
 this
 is
