--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -8143,6 +8143,27 @@ none
 -
 name
 :
+HashSymbol
+operands
+:
+input
+:
+Symbol
+result_type
+:
+Int32
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+none
+-
+name
+:
 SetObjectHasNonBigInt
 operands
 :
