Bug 1670261 - GeckoView: Ignore the JNA module. r=agi,firefox-build-system-reviewers,nalexander
Otherwise we end up with `libjnidispatch.so` for all targets in the
final APK, which we don't want.

Depends on D121100

Differential Revision: https://phabricator.services.mozilla.com/D122104

UltraBlame original commit: 1b83eb807678e3cd15dcfa1dd384c36743809f8a

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -2128,6 +2128,26 @@ glean
 -
 native
 '
+all
+*
+.
+exclude
+group
+:
+'
+net
+.
+java
+.
+dev
+.
+jna
+'
+module
+:
+'
+jna
+'
 }
 dependencies
 {
