Bug 1723155 - Part 8: Add NewPrivateName opcode. r=mgaudet
Fix this TODO by adding a new opcode `JSOp::NewPrivateName`.

Depends on D121741

Differential Revision: https://phabricator.services.mozilla.com/D121742

UltraBlame original commit: 5e6d1848ce620a905a1d5de23ca5b9e4e0eaa2af

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -6494,6 +6494,22 @@ false
 -
 name
 :
+NewPrivateName
+arguments
+:
+name
+:
+PropertyName
+*
+result_type
+:
+Symbol
+possibly_calls
+:
+true
+-
+name
+:
 CheckPrivateFieldCache
 gen_boilerplate
 :
