Bug 1716307 - Only run test_SocketScalars when there's a socket process r=janerik
Differential Revision: https://phabricator.services.mozilla.com/D122012

UltraBlame original commit: feb68b3ba329e969ef00454a56e51fbe1ddb7146

--- a/toolkit/components/telemetry/tests/unit/xpcshell.ini
+++ b/toolkit/components/telemetry/tests/unit/xpcshell.ini
@@ -513,6 +513,19 @@ test_SocketScalars
 .
 js
 ]
+run
+-
+if
+=
+socketprocess_networking
+#
+Needs
+socket
+process
+(
+bug
+1716307
+)
 [
 test_TelemetryReportingPolicy
 .
