Bug 1650089 - Part 4: Update various tests with new expectations, r=annyG,kmag
The changes in the previous part had a few behaviour changes which are visible
in tests, including cross-origin iframes with sandboxed origins now loading
remotely, and process selection for chrome-triggered null principal loads
behaving differently. In general this caused more process switches.

Differential Revision: https://phabricator.services.mozilla.com/D120674

UltraBlame original commit: 6d77efa0db2a5c735b302c85fd2802a99adbe26c

--- a/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
+++ b/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
@@ -16,6 +16,10 @@ rAF
 expected
 :
 if
+fission
+:
+FAIL
+if
 debug
 and
 (
@@ -26,9 +30,6 @@ os
 win
 "
 )
-and
-not
-fission
 and
 (
 processor
@@ -54,9 +55,6 @@ win
 "
 )
 and
-not
-fission
-and
 (
 processor
 =
@@ -65,21 +63,6 @@ processor
 x86
 "
 )
-:
-PASS
-if
-debug
-and
-(
-os
-=
-=
-"
-win
-"
-)
-and
-fission
 :
 PASS
 if
@@ -125,3 +108,19 @@ PASS
 PASS
 FAIL
 ]
+[
+topDocument
+.
+scrollingElement
+.
+scrollTop
+=
+100
+]
+expected
+:
+if
+fission
+:
+FAIL
+PASS
