--- a/intl/locale/components.conf
+++ b/intl/locale/components.conf
@@ -274,4 +274,65 @@ OSPreferences
 GetInstanceAddRefed
 '
 }
+{
+'
+cid
+'
+:
+'
+{
+a1b72850
+-
+a999
+-
+11d2
+-
+9119
+-
+006008a6edf6
+}
+'
+'
+contract_ids
+'
+:
+[
+'
+mozilla
+.
+org
+/
+intl
+/
+collation
+-
+factory
+;
+1
+'
+]
+'
+type
+'
+:
+'
+nsCollationFactory
+'
+'
+headers
+'
+:
+[
+'
+/
+intl
+/
+locale
+/
+nsCollationFactory
+.
+h
+'
+]
+}
 ]
