Bug 1723573 - Migrate mochitest-devtools-chrome from AWS to Azure r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D122110

UltraBlame original commit: df5e42faf05c0f3bac2782a7e5d39ac809aab713

--- a/devtools/client/inspector/animation/test/browser.ini
+++ b/devtools/client/inspector/animation/test/browser.ini
@@ -261,6 +261,14 @@ target
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_animation_animation
 -
@@ -317,6 +325,10 @@ ccov
 #
 Bug
 1665011
+win10_2004
+#
+Bug
+1723573
 [
 browser_animation_animation
 -
