--- a/devtools/client/inspector/rules/test/browser_part1.ini
+++ b/devtools/client/inspector/rules/test/browser_part1.ini
@@ -402,6 +402,13 @@ apple_catalina
 #
 Bug
 1713158
+win10_2004
+&
+&
+debug
+#
+Bug
+1723573
 [
 browser_rules_authored_override
 .
@@ -457,6 +464,14 @@ browser_rules_color_scheme_simulation_rdm
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_rules_color_scheme_simulation
 .
