--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -792,6 +792,10 @@ skip
 if
 =
 verify
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_cause_redirect
 .
@@ -934,6 +938,14 @@ browser_net_columns_time
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_complex
 -
@@ -962,6 +974,10 @@ win
 '
 )
 )
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_content
 -
@@ -995,6 +1011,14 @@ utils
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_copy_image_as_data_uri
 .
@@ -1019,6 +1043,10 @@ skip
 -
 if
 =
+win10_2004
+#
+Bug
+1723573
 (
 verify
 &
@@ -1117,6 +1145,14 @@ browser_net_fonts
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_frame
 .
@@ -1857,6 +1893,14 @@ bar
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_status
 -
@@ -2012,6 +2056,14 @@ browser_net_worker_stacks
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_net_ws
 -
