--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -2763,7 +2763,6 @@ skip
 -
 if
 =
-(
 os
 =
 =
@@ -2777,6 +2776,10 @@ debug
 #
 Bug
 1653057
+win10_2004
+#
+Bug
+1723573
 [
 browser_webconsole_responsive_design_mode
 .
@@ -2984,6 +2987,14 @@ browser_webconsole_stubs_network_event
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_webconsole_stubs_page_error
 .
