--- a/devtools/shared/commands/resource/tests/browser.ini
+++ b/devtools/shared/commands/resource/tests/browser.ini
@@ -178,6 +178,14 @@ browser_resources_document_events
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_resources_error_messages
 .
