--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -1292,6 +1292,14 @@ browser_inspector_inspect_mutated_node
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_inspector_inspect_node_contextmenu
 .
