--- a/devtools/client/storage/test/browser.ini
+++ b/devtools/client/storage/test/browser.ini
@@ -299,6 +299,10 @@ fission
 #
 Bug
 1685474
+win10_2004
+#
+Bug
+1723573
 [
 browser_storage_cookies_add
 .
@@ -476,6 +480,14 @@ browser_storage_indexeddb_duplicate_names
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_storage_indexeddb_hide_internal_dbs
 .
