Bug 1599979 - Enable LSNG on Release; r=dom-storage-reviewers,jari,jstutte
Differential Revision: https://phabricator.services.mozilla.com/D121941

UltraBlame original commit: e165d93f022ce3ff7a26f700098cfa64430f710e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -19816,42 +19816,15 @@ enabled
 #
 See
 bug
-1517090
-for
-enabling
-this
-on
-Nightly
-.
-#
-See
-bug
-1534736
-for
-changing
-it
-to
-EARLY_BETA_OR_EARLIER
-.
-#
-See
-bug
-1539835
+1599979
 for
 enabling
 this
 unconditionally
-.
-#
-See
-bug
-1619948
-for
-changing
-it
-back
-to
-EARLY_BETA_OR_EARLIER
+(
+second
+attempt
+)
 .
 -
 name
@@ -19866,7 +19839,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
