Bug 1723124 - Part 1: Use GetFunctionRealm when creating promise reaction/thenable jobs. r=jandem
Also changed the unwrap performed in EnqueuePromiseReactionJob from unchecked
to checked, given we don't rely on the job's realm there, and fallbacking
to the current realm works.

Differential Revision: https://phabricator.services.mozilla.com/D121816

UltraBlame original commit: 0fcc1b66665f0cdd65778605d51b9b3afa71c407

--- a/dom/promise/tests/chrome.ini
+++ b/dom/promise/tests/chrome.ini
@@ -74,3 +74,15 @@ debug
 =
 =
 false
+[
+test_promise_job_with_bind_from_discarded_iframe
+.
+html
+]
+support
+-
+files
+=
+file_promise_job_with_bind_from_discarded_iframe
+.
+html
