--- a/substitute-local-geckoview.gradle
+++ b/substitute-local-geckoview.gradle
@@ -330,6 +330,32 @@ message
 "
 )
 }
+def
+warn
+(
+message
+)
+{
+logger
+.
+warn
+(
+"
+[
+substitute
+-
+local
+-
+geckoview
+]
+Warning
+:
+{
+message
+}
+"
+)
+}
 if
 (
 !
@@ -677,7 +703,7 @@ is
 only
 supported
 for
-Fennec
+GeckoView
 i
 .
 e
@@ -1185,15 +1211,28 @@ name
 =
 '
 '
+def
+isLite
+=
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
 if
 (
-geckoviewOmniModules
-.
-contains
-(
-module
+isLite
 )
-)
+{
+name
+=
+'
+geckoview
+-
+default
+'
+}
+else
 {
 name
 =
@@ -1205,15 +1244,130 @@ default
 omni
 '
 }
-else
+if
+(
+geckoviewModules
+.
+contains
+(
+module
+)
+&
+&
+!
+isLite
+)
 {
-name
-=
-'
+warn
+(
+"
+Substituting
+a
+geckoview
+omni
+build
+into
+a
+lite
+dependency
+.
+Add
+ac_add_options
+-
+-
+enable
+-
 geckoview
 -
-default
-'
+lite
+to
+{
+mozconfig
+.
+mozconfig
+.
+path
+}
+to
+fix
+this
+.
+"
+)
+}
+else
+if
+(
+geckoviewOmniModules
+.
+contains
+(
+module
+)
+&
+&
+isLite
+)
+{
+/
+/
+Substituting
+lite
+into
+omni
+is
+unlikely
+to
+work
+at
+/
+/
+all
+so
+we
+just
+error
+out
+here
+.
+throw
+new
+GradleException
+(
+"
+Substituting
+a
+geckoview
+lite
+build
+into
+an
+omni
+dependency
+.
+Remove
+ac_add_options
+-
+-
+enable
+-
+geckoview
+-
+lite
+in
+{
+mozconfig
+.
+mozconfig
+.
+path
+}
+to
+fix
+this
+.
+"
+)
 }
 log
 (
