Bug 1587973 - Part 3: Support device-pixel-content-box for ResizeObserver. r=emilio
This patch implements device-pixel-content-box for ResizeObserver.
GetTargetSize() returns CSS pixels for {border|content}-box, or device
pixels for device-pixel-content-box. We round the device pixel to
integral based on the spec,
https://drafts.csswg.org/resize-observer/#calculate-box-size.
And then we compare the current calculated box sizes and the last updated one
in IsActive().

Besides, the current wpts only use zoom property to verify this, but zoom
property is non-standard and we doesn't supports it, so now we only test the
getter functions for device-pixel-content-box and the subpixel snapping
algorithm (e.g. devicepixel.html) for Gecko in wpts.

Differential Revision: https://phabricator.services.mozilla.com/D120776

UltraBlame original commit: 58545891aee340f78612673804964c682ab9c24e

--- a/testing/web-platform/meta/resize-observer/devicepixel.html.ini
+++ b/testing/web-platform/meta/resize-observer/devicepixel.html.ini
@@ -1,8 +1,21 @@
-implementation
--
-status
+[
+devicepixel
+.
+html
+]
+fuzzy
 :
-backlog
+maxDifference
+=
+0
+-
+2
+;
+totalPixels
+=
+0
+-
+1391
 bug
 :
 https
@@ -21,12 +34,4 @@ cgi
 ?
 id
 =
-1587973
-[
-devicepixel
-.
-html
-]
-expected
-:
-FAIL
+1723618
