--- a/testing/web-platform/meta/resize-observer/observe.html.ini
+++ b/testing/web-platform/meta/resize-observer/observe.html.ini
@@ -1,27 +1,3 @@
-implementation
--
-status
-:
-backlog
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1587973
 [
 observe
 .
@@ -29,13 +5,71 @@ html
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+webrender
+:
+[
+"
 TIMEOUT
+"
+"
+OK
+"
+]
 [
 guard
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+webrender
+:
+[
+"
 NOTRUN
+"
+"
+PASS
+"
+]
+[
+test5
+:
+observe
+img
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+[
+PASS
+FAIL
+]
 [
 test6
 :
@@ -55,10 +89,6 @@ android
 [
 FAIL
 PASS
-]
-[
-PASS
-FAIL
 ]
 [
 test8
@@ -88,10 +118,116 @@ os
 =
 =
 "
-android
+win
 "
 :
+[
 FAIL
+PASS
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1723619
+[
+test9
+:
+simple
+content
+-
+box
+observation
+but
+keep
+border
+-
+box
+size
+unchanged
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
+[
+test10
+:
+simple
+border
+-
+box
+observation
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1723619
 [
 test13
 :
@@ -173,101 +309,28 @@ win
 "
 :
 [
-FAIL
-PASS
-]
-[
-test18
-:
-an
-observation
-is
-fired
-when
-device
--
-pixel
--
-content
--
-box
-is
-being
-observed
-]
-expected
-:
-FAIL
-[
-test8
-:
-simple
-content
--
-box
-observation
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-[
-FAIL
-PASS
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
 PASS
 FAIL
 ]
-[
-test10
+bug
 :
-simple
-border
--
-box
-observation
-]
-expected
+https
 :
-if
-os
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
 =
-=
-"
-linux
-"
-:
-[
-FAIL
-PASS
-]
-if
-os
-=
-=
-"
-win
-"
-:
-[
-FAIL
-PASS
-]
+1723619
 [
 test17
 :
@@ -304,53 +367,22 @@ win
 FAIL
 PASS
 ]
-[
-test5
+bug
 :
-observe
-img
-]
-expected
+https
 :
-if
-os
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
 =
-=
-"
-win
-"
-:
-[
-PASS
-FAIL
-]
-[
-test9
-:
-simple
-content
--
-box
-observation
-but
-keep
-border
--
-box
-size
-unchanged
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-[
-PASS
-FAIL
-]
+1723619
