Bug 1675902 - update android condition r=aryx DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122289

UltraBlame original commit: 8c7c61d40a5c32557afb6ad0770648daa9c42492

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -2334,7 +2334,7 @@ skip
 -
 if
 =
-os
+toolkit
 =
 =
 '
@@ -2342,13 +2342,11 @@ android
 '
 &
 &
-os_version
+android_version
 =
 =
 '
-7
-.
-0
+24
 '
 &
 &
@@ -2384,7 +2382,7 @@ skip
 -
 if
 =
-os
+toolkit
 =
 =
 '
@@ -2392,13 +2390,11 @@ android
 '
 &
 &
-os_version
+android_version
 =
 =
 '
-7
-.
-0
+24
 '
 &
 &
@@ -3196,7 +3192,7 @@ skip
 -
 if
 =
-os
+toolkit
 =
 =
 '
@@ -3204,13 +3200,11 @@ android
 '
 &
 &
-os_version
+android_version
 =
 =
 '
-7
-.
-0
+24
 '
 &
 &
